# AgentAIMO

./: .gitignore  2511.01846v1_Part1.txt  AGENTS.md  BrowserChat.txt  CLAUDE.md  GEMINI.md  GeminiChat.txt  README.md  Refining LLM Rubric for Human Reasoning.md  analyze_failures.py  annotation_research_context.md  c2_sorted_check.txt  chunk_research_data.py  create_preference_dataset.py  dpo_correction_dataset.jsonl  dpo_correction_dataset_v2.jsonl  dpo_correction_dataset_v3.jsonl  dpo_correction_dataset_v4.jsonl  evidence.md  evolution.md  filter_notebooks.py  fix_lines_16_91.py  mcts_rubric_analysis.md  new_context_content.txt  optimize_context.py  pdf1.txt  pdf2.txt  pdf3.txt  pdf_abstracts.txt  prd.json  process_context_final_v2.py  process_pdf_v2.py  prompt_patch.txt  pyproject.toml  research_data.jsonl  research_data2.jsonl  research_data2.jsonl.bak  research_summary.txt  rubric.md  scrape_candidate_notebooks.py  (+4 more)
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
agent/: README.md  __init__.py  deep_researcher.py  prompts.py  sandbox.py
analysis/: README.md  analysis_report.txt  analyze_results.py  stats.json
data/: ablation_results.json
docs/: ABLATION_RESULTS_P4A.md  ANSWER_EXTRACTION_AUDIT.md  BASELINE_METRICS.md  BLINDSPOT_EXECUTIVE_SUMMARY.md  CODEBASE_ANALYSIS.md  CRITICAL_REVIEW_EVOLUTION_PAPER.md  CRITICAL_REVIEW_TODAY.md  FORWARD_PLAN.md  FORWARD_PLAN_v2.md  LEGACY_ARTIFACT_INVENTORY.md  MOVE_CANDIDATES.md  PHASE4_HANDOFF.md  RALPHTUI_INSTRUCTIONS.md  README.md  REPO_MAP.md  RISK_REGISTER.md  VERIFICATION_AUDIT.md
(+96 files in other folders)
