[project]
name = "agentagent-aimo"
version = "0.1.0"
description = "AgentAIMO — AI Mathematical Olympiad reasoning agent research"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # LLM inference
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.7.0",
    # Math / symbolic
    "sympy>=1.13.0",
    "numpy>=1.26.0",
    # Execution sandbox
    "RestrictedPython>=7.0",
    # HTTP / retry
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    # Data / serialization
    "pydantic>=2.7.0",
    # YouTube / web research
    "youtube-transcript-api>=0.6.2",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
